# Amogus

./: README.md
Amogus/: CMakeLists.txt
Amogus-main 2/FlappyBird/: Declarations.h  MipsFunc.c  MipsGamework.c  labwork.S  outfile.elf  outfile.hex
Amogus-main/FlappyBird/: Declarations.h  GameData.c  MipsFunc.c  MipsGamework.c  outfile.elf  outfile.hex
Amogus-main/FlappyBird/IOShieldOled/: IOShieldOled.h
Amogus/FlappyBird/: Declarations.h  Main.c  MipsFunc.c  outfile.elf  outfile.hex
FlappyBird/: ButtonHandler.c  CMakeLists.txt  Declarations.h  GameData.c  GameIcons.c  Main.c  MipsFunc.c  MipsGamework.c  TestMain.c  mipslabdata.c  mipslabfunc.c  mipslabmain.c  mipslabwork.c  outfile.elf  outfile.hex  time4io.c
FlappyBird/FlappyBird/: Declarations.h  TestMain  outfile.hex  todo.c
FlappyBird/TestMain.dSYM/Contents/Resources/DWARF/: TestMain
FlappyBird/time4timer/: Obstacles.c  answers.md  main.c  mipslabwork.c  outfile.elf  outfile.hex  time4io.c
